[gd_scene load_steps=5 format=3 uid="uid://03ba6erh0qlg"]

[ext_resource type="PackedScene" uid="uid://d36o7vkm36qq" path="res://bearer/display/bearer_display.tscn" id="1_bifpm"]
[ext_resource type="Script" path="res://app/game_ui.gd" id="1_piche"]
[ext_resource type="PackedScene" uid="uid://ctcsydwnhb4ii" path="res://event/decision/display/decision_display.tscn" id="2_b5b6n"]
[ext_resource type="PackedScene" uid="uid://bimvq3vhbqo3u" path="res://event/inflection/display/inflection_display.tscn" id="4_n4sob"]

[node name="GameUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_piche")

[node name="BearerDisplay" parent="." instance=ExtResource("1_bifpm")]
unique_name_in_owner = true
layout_mode = 2

[node name="DecisionDisplay" parent="." instance=ExtResource("2_b5b6n")]
unique_name_in_owner = true
layout_mode = 2

[node name="InflectionDisplay" parent="." instance=ExtResource("4_n4sob")]
unique_name_in_owner = true
layout_mode = 2
